refactor(security): 将安全配置从独立类合并到WebConfig并优化代码结构
- 移除独立的SecurityConfig类并将安全配置整合到WebConfig中
- 添加必要的Spring Security依赖注入和配置方法
- 保持原有的密码编码器、过滤器链和跨域配置功能
- 优化代码组织结构减少配置文件数量
- 确保JWT认证过滤器正确集成到安全链中
- 统一资源配置和安全配置管理